2008-02-24  Inge Wallin  <inge@lysator.liu.se>

	Krazy fixes:
	* src/lib/MapTheme.cpp,
	* src/lib/TinyWebBrowser.cpp,
	* src/lib/DiscCache.cpp,
	* src/lib/FileStoragePolicy.cpp,
	* src/lib/geoscene/data/GeoSceneMapTheme.cpp: 
	  Check for single char QStrings better written as a QChar

2008-02-17  Inge Wallin  <inge@lysator.liu.se>

	Move current projection to ViewportParams from MarbleMap.
	* src/lib/MarbleMap.cpp (MarbleMapPrivate): Remove all projections 
	(construct): Don't init.
	(setProjection): Don't set currrentProjection;
	(geoCoordinates, screenCoordinates): new calling conventions
	* src/lib/ViewParams.cpp (currentProjection): New function
	* src/lib/ViewportParams.{h,cpp} (currentProjection): New function
	(setProjection): initialize m_currentProjection
	(s_*Projection): new static members
	
	Follow the coding standards
	* src/lib/PlaceMarkLayout.cpp: cleaning

2008-02-16  Inge Wallin  <inge@lysator.liu.se>

	Clean up a bit
	* src/lib/MarbleMap.cpp (geoCoordinates): remove #if'ed out code
	 (screenCoordinates): remove #if'ed out code
	
2008-02-15  Carlos Licea  <carlos.licea@kdemail.net>
    *PlaceMarkPainter.cpp: Fix my previous verbosiness, thanks Jeremy!.

2008-02-15  Carlos Licea  <carlos.licea@kdemail.net>
    Let there be placemarks.
    *PlaceMarkPainter: weird, for some reason OR doesn't work
     in a switch.

2008-02-16  Inge Wallin  <inge@lysator.liu.se>

	Clean up after the last few changes.
	* src/lib/MarbleWidget.cpp (setMapTheme): Clean up
	* src/lib/MarbleMap.{h,cpp} (misc): Clean up
	(repaint): removed
	(update):  removed
	* src/lib/ViewParams.cpp (ViewParams, centerCoordinates): Clean up

	Activate the Projection classes!
	* src/lib/ViewParams.{h,cpp} (viewport): new function
	* src/lib/ViewportParams.{h,cpp} (centerCoordinats): is now const
	* src/lib/MarbleMap.cpp (MarbleMapPrivate): Add 3 projection
	members and one pointer currentProjection.
	(construct): init currentProjection
	(setProjection): set currentProjection